--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>React Boilerplate</title>
-    <link rel="stylesheet" href="styles.css" class="" />
+    <link rel="stylesheet" href="styles/App.css" />
   </head>
-  
+
   <!--  Your task is to create a subscription price grid component in react.
 The app is basically divided in 3 boxes each with a distinguishing background color and text.
 The table should also have some CSS formatting.
